--- a/src/app/landing/home/styles/hero.css
+++ b/src/app/landing/home/styles/hero.css
@@ -12,7 +12,7 @@
     margin: 0 !important;
     padding: 8rem 2rem 0 2rem !important;
     border: none !important;
-    margin-bottom: 0 !important;
+    margin-bottom: 1rem !important;
   }
 
   .hero-overlay {
