--- a/src/app/landing/home/home.html
+++ b/src/app/landing/home/home.html
@@ -453,10 +453,8 @@
       <!-- Contact info with QR Code -->
       <div class="contact-card animate-on-scroll stagger-2">
         <div class="contact-info">
-          <p>📞 +63 966 910 9968</p>
-          <p>
-            📍 Sundance Residences, Banawa Cebu City, Cebu, Philippines
-          </p>
+          <a  href="tel:09669109968">📞 +63 966 910 9968</a>
+          <a  href="https://maps.app.goo.gl/ruVs2NUFiQ8Vh3eq9" target="_blank">📍 Sundance Residences, Banawa Cebu City, Cebu, Philippines</a>
         </div>
         
         <!-- QR Code Section -->
@@ -467,7 +465,7 @@
             alt="Bubble & Cuddle Facebook Page QR Code" 
             class="qr-code"
           />
-          <p class="qr-instruction">Scan to visit our page</p>
+          <p class="qr-instruction">Scan to Reserve</p>
         </div>
       </div>
 
